# magic-html-plus-python

./: .gitattributes  .gitignore  README.md
magic-html-plus-python-mcp/: OPENCODE_GUIDE.md  README.md  claude_desktop_config.json  main.py  mcp_server.py  pyproject.toml
magic-html-plus-python-package/: README.md  main.py  pyproject.toml  requirements.txt
magic-html-plus-python-package/magic_html/: utils.py
magic-html-plus-python-package/magic_html/extractors/: base_extractor.py  forum_extractor.py  weixin_extractor.py
magic-html-plus-python-program/: README.md  magic_html_plus_python_package-0.1.0-py3-none-any.whl  pyproject.toml  requirements.txt
magic-html-plus-python-skill/.claude/skills/magic-html-extractor/: SKILL.md
